hide cursor when recording

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             sampleSize,
             latency: 0,
           },
+          cursor: false
         });
         stream.oninactive = onBtnStopClicked;
         recBtn.style.display = "none";
